[gd_scene load_steps=14 format=3 uid="uid://13o6gi6ilbss"]

[ext_resource type="Script" path="res://Characters/Turtle/Turtle.gd" id="1_ow1ky"]
[ext_resource type="Texture2D" uid="uid://dd4hiwn0lelqe" path="res://Characters/Turtle/turtle.png" id="2_ujgdt"]
[ext_resource type="PackedScene" uid="uid://cpembt8wk8d3j" path="res://Game/Health/Health.tscn" id="3_mkcoc"]
[ext_resource type="PackedScene" uid="uid://bruykml7gpfws" path="res://UI/HealthBar/HealthBar.tscn" id="4_4bxws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0gp0"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_0kav8"]
length = 0.001

[sub_resource type="Animation" id="Animation_m5gsy"]
resource_name = "take_damage"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.694118, 0.0392157, 0.286275, 0.694118), Color(1, 1, 1, 0.972549), Color(0.694118, 0.0392157, 0.286275, 0.694118), Color(1, 1, 1, 0.972549), Color(0.694118, 0.0392157, 0.286275, 0.694118), Color(1, 1, 1, 0.972549)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u4swa"]
_data = {
"RESET": SubResource("Animation_0kav8"),
"take_damage": SubResource("Animation_m5gsy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbru2"]
size = Vector2(128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbet6"]
atlas = ExtResource("2_ujgdt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qbgq"]
atlas = ExtResource("2_ujgdt")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_25nsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbet6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qbgq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_13txl"]
radius = 192.167

[node name="Turtle" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_ow1ky")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s0gp0")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u4swa")
}

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_sbru2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.972549)
texture_filter = 1
rotation = 1.5708
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_25nsf")

[node name="Health" parent="." instance=ExtResource("3_mkcoc")]

[node name="MenuArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="MenuArea"]
shape = SubResource("CircleShape2D_13txl")
debug_color = Color(0.739902, 0.10871, 0.264353, 0.42)

[node name="HealthBar" parent="." node_paths=PackedStringArray("health") instance=ExtResource("4_4bxws")]
offset_left = -128.0
offset_top = 160.0
offset_right = 128.0
offset_bottom = 170.0
health = NodePath("../Health")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_area_2d_body_entered"]
[connection signal="dead" from="Health" to="." method="_on_health_dead"]
[connection signal="body_entered" from="MenuArea" to="." method="_on_menu_area_body_entered"]
[connection signal="body_exited" from="MenuArea" to="." method="_on_menu_area_body_exited"]
